# linked_ptr

./: CMakeLists.txt  linked_ptr.hpp  main.cpp
